--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
 
   <body>
-    <script src="p5_project/sketch.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
